--- a/client/src/components/Modal/Modal.module.css
+++ b/client/src/components/Modal/Modal.module.css
@@ -32,6 +32,7 @@
   display: flex;
   align-items: center;
 }
+
 .groupHead {
   font-size: 20px;
 }
@@ -44,6 +45,7 @@ input {
   padding: 10px;
   height: 40px;
 }
+
 .chooseColor {
   display: flex;
   align-items: center;
@@ -70,18 +72,23 @@ input {
 .color1 {
   background-color: #b38bfa;
 }
+
 .color2 {
   background-color: #ff79f2;
 }
+
 .color3 {
   background-color: #43e6fc;
 }
+
 .color4 {
   background-color: #f19576;
 }
+
 .color5 {
   background-color: #0047ff;
 }
+
 .color6 {
   background-color: #6691ff;
 }
@@ -95,4 +102,56 @@ button {
   padding: 5px;
   margin-top: 10px;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .modal {
+    width: 90%;
+    height: auto;
+    max-width: 95vw;
+    max-height: 90vh;
+    padding: 15px;
+  }
+
+  .heading {
+    font-size: 18px;
+  }
+
+  .groupName {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .groupHead {
+    font-size: 18px;
+  }
+
+  input {
+    width: 100%;
+  }
+
+  .chooseColor {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .colorHead {
+    font-size: 18px;
+  }
+
+  .colors {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .colors div {
+    width: 30px;
+    height: 30px;
+  }
+
+  button {
+    width: 100px;
+    padding: 10px;
+    font-size: 16px;
+  }
 }
