--- a/client/src/components/Sidebar/Sidebar.module.css
+++ b/client/src/components/Sidebar/Sidebar.module.css
@@ -4,19 +4,55 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .heading {
   font-weight: 500;
   font-size: 28px;
   text-align: center;
+  margin-bottom: 0;
   color: #000000;
   position: sticky;
+  top: 0;
+  background-color: #f7f7f7;
+  padding-bottom: 10px;
 }
 
-/* .notesGroup {
-  overflow-y: scroll;
-} */
+.notesGroup {
+  flex: 1;
+  overflow-y: auto;
+  padding: 10px;
+}
+
+.groupItem {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.groupItem:hover {
+  background-color: #ececec;
+}
+
+.groupSymbol {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 18px;
+  color: #fff;
+  margin-right: 10px;
+}
+
+.groupName {
+  font-size: 16px;
+  color: #333;
+}
 
 .icon {
   width: 60px;
@@ -25,4 +61,38 @@
   margin: 20px;
   position: sticky;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #f5f5f5;
+    overflow-y: auto;
+    padding: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .groupItem {
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+
+  .groupSymbol {
+    width: 30px;
+    height: 30px;
+    font-size: 14px;
+  }
+
+  .groupName {
+    font-size: 18px;
+  }
+
+  .icon {
+    padding: 10px;
+    box-sizing: border-box;
+  }
 }
